--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@npmcli/fs": "^3.1.0",
-    "@npmcli/move-file": "^3.0.0",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "source-map-url": "^0.4.1",
-    "uuid": "^9.0.0"
+    "uglify-js": "^3.17.4",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
