--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@npmcli/fs": "^3.1.0",
     "expo": "^1.0.0",
+    "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "source-map-url": "^0.4.1",
     "uglify-js": "^3.17.4",
-    "uuid": "^7.0.3"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
