--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sicksenseapp",
+  "name": "sick-sense",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,21 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@npmcli/fs": "^3.1.0",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
-    "expo": "^48.0.0",
-    "expo-app-loading": "^2.1.1",
-    "expo-font": "~11.1.1",
-    "expo-splash-screen": "~0.18.1",
-    "expo-status-bar": "~1.4.4",
+    "expo": "~49.0.15",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.71.3",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "source-map-url": "^0.4.1",
-    "uglify-js": "^3.17.4",
-    "uuid": "^9.0.0"
+    "react-native": "0.72.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
