Update app.json and package.json with new dependencies and permissions

--- a/app.json
+++ b/app.json
@@ -24,7 +24,10 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+
+    "expo-location": {
+      "locationAlwaysAndWhenInUsePermission": "Allow Sick Sense to use your location."
     }
-   
   }
 }
