--- a/app.json
+++ b/app.json
@@ -11,7 +11,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -25,9 +27,8 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-
-    "expo-location": {
-      "locationAlwaysAndWhenInUsePermission": "Allow Sick Sense to use your location."
-    }
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
