--- a/package.json
+++ b/package.json
@@ -9,31 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-clipboard/clipboard": "^1.14.1",
-    "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "expo": "~49.0.15",
-    "expo-font": "~11.4.0",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^51.0.2",
+    "expo-clipboard": "~6.0.3",
+    "expo-font": "~12.0.5",
+    "expo-location": "~17.0.1",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
+    "lodash": "^4.17.21",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-multiple-select": "^0.5.12",
+    "react-native": "0.74.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-responsive-dimensions": "^3.1.1",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
-    "expo-clipboard": "~4.3.1",
-    "expo-location": "~16.1.0"
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
